--- a/css/style.css
+++ b/css/style.css
@@ -29,6 +29,9 @@ html {
 
 /*chrome font-size<12px */
 /*清除浮动样式class="clearfix"*/
+#pic-list{
+    min-height: 300px;
+}
 .clearfix:after {
     content: ".";
     display: block;
@@ -164,9 +167,9 @@ a:hover {
 /* slider */
 #slider-box {
     width: 100%;
-    height: 270px;
+    height: 167px;
     text-align: center;
-    margin-bottom: 15px;
+    margin-bottom: 7px;
     border-bottom: 1px solid #aaa;
 }
 
